[metadata]
name = grascii_editor
version = 0.5.0a1
author = Chanic Panic
author_email = dev@chanicpanic.com
description = Turn Grascii text into Gregg Shorthand
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grascii/editor
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = grascii_editor
python_requires = >=3.7
install_requires =
    Flask
    grascii_rpc@git+https://github.com/grascii/rpc.git@e55839ffd99400349bf2da93b86b4c20475dea70
